--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -6,7 +6,8 @@
   margin-bottom: 65px;
 
   &:hover img {
-    scale: 1.1;
+    rotate: 180deg;
+    scale: 1.2;
   }
 
   @media (max-width: 1090px) {
