--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,39 +1,45 @@
 @import '../variables.scss';
 
 .header {
-  border-bottom: 1px solid $gray-line;
-  padding: 40px 0 25px;
 
   .container {
-    .header_top {
+    .inner_container {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 20px 0 20px;
 
       @media (max-width: 768px) {
         flex-direction: column;
       }
     }
+  }
 
-    .header-nav {
-      padding-top: 20px;
-    }
+  .bot_header {
+    border-bottom: 1px solid $gray-line;
+    border-top: 1px solid $gray-line;
+    background: #fe5f1e;
+    .container {
+      .header_links {
+        display: flex;
+        align-items: center;
+        gap: 25px;
+        padding: 20px 0 20px;
 
-    .header_links {
-      display: flex;
-      align-items: center;
-      gap: 25px;
-      li {
-        border-radius: 30px;
-        margin-right: 10px;
-        font-weight: bold;
-        cursor: pointer;
-        transition: .4s;
-        &:hover{
-          color: #fe5f1e;
+        li {
+          border-radius: 30px;
+          margin-right: 10px;
+          font-weight: bold;
+          cursor: pointer;
+          transition: .4s;
+          color: #fff;
+          &:hover {
+            color: #fe5f1e;
+          }
         }
       }
     }
+
   }
 
   @media (max-width: 768px) {
