--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -34,7 +34,7 @@
           transition: .4s;
           color: #fff;
           &:hover {
-            color: #fe5f1e;
+            color: #000;
           }
         }
       }
